feat: added visualization of neural network
